--- a/tp_api_project/.env.example
+++ b/tp_api_project/.env.example
@@ -4,3 +4,7 @@ TP_API_DUCKDB_PATH=../data/prod.duckdb
 # For local development you can disable read-only connections or flip TP_API_ENV to dev
 TP_API_DUCKDB_READ_ONLY=true
 # TP_API_DUCKDB_SCHEMA=certified
+# TP_API_DB_BACKEND=duckdb
+# TP_API_DB_POOL_SIZE=5
+# TP_API_DB_POOL_TIMEOUT=5.0
+# TP_API_LOG_LEVEL=INFO
