--- a/tp_api_project/pyproject.toml
+++ b/tp_api_project/pyproject.toml
@@ -15,6 +15,28 @@ duckdb = "^1.4.0"
 pytest = "^8.4.2"
 httpx = "^0.28.1"
 mockito = "^1.4.0"
+ruff = "^0.7.1"
+
+[tool.ruff]
+target-version = "py313"
+line-length = 100
+src = ["app", "tests"]
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "F",
+    "W",
+    "I",
+    "N",
+]
+ignore = [
+    "E501",  # handled via formatter preferences within the team
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
