--- a/tp_data_project/pyproject.toml
+++ b/tp_data_project/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.13"
 dbt-core = "^1.10.13"
 dbt-duckdb = "^1.9.6"
 
+[tool.poetry.group.dev.dependencies]
+sqlfluff = "^3.1.0"
+sqlfluff-templater-dbt = "^3.1.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
